[tool.poetry]
name = "chispa"
version = "0.10.0"
description = "Pyspark test helper library"
authors = ["MrPowers <matthewkevinpowers@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MrPowers/chispa/"
keywords = ['apachespark', 'spark', 'pyspark']


###########################################################################
#                         MAIN DEPENDENCIES
###########################################################################

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

###########################################################################
#                         DEPENDENCY GROUPS 
###########################################################################

[tool.poetry.group.development]
optional = true

[tool.poetry.group.testing]
optional = true

[tool.poetry.group.development.dependencies]
pyspark = ">2.0.0"
findspark = "1.4.2"

[tool.poetry.group.testing.dependencies]
pytest = "3.2.2"
pytest_describe = "^1.0.0"
pyspark = ">2.0.0"
findspark = "1.4.2"

[tool.poetry.group.mkdocs]
optional = true

[tool.poetry.group.mkdocs.dependencies]
mkdocstrings-python = "^0.8.3"
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"
markdown-include = "^0.8.1"
mkdocs = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
